Bug 1507700: allow incoming STUN requests. r=bwc

Differential Revision: https://phabricator.services.mozilla.com/D12384